# ppt-takeaway

./: .gitignore  CLAUDE.md  _log_tail.txt  _log_tail2.txt  _replace_find_week_tab.py  ppt_extractor.py  pyproject.toml  run_ppt_extractor.bat  run_silent.bat  使用说明.txt
.claude/: settings.local.json
ppt_slides/: _test_result.txt  click_sequence.json.bak  config.json  groups.json  ppt_log.txt
