[project]
name = "ppt-takeaway"
version = "0.1.0"
description = "Windows GUI tool for capturing PPT pages from classroom replay videos."
requires-python = ">=3.10,<3.14"
dependencies = [
    "opencv-python>=4.9",
    "pillow>=10",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "pytesseract>=0.3.10",
]
